<resources>
    <string name="app_name">PowerPicks</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="google_icon">google_icon</string>
    <string name="fb_icon">fb_icon</string>
    <string name="twitter_icon">twitter_icon</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>

    <!-- FACEBOOK LOGIN STRINGS -->
    <string name="facebook_app_id">3335220466739079</string>
    <string name="fb_login_protocol_scheme">fb3335220466739079</string>
    <string name="facebook_client_token">f91437e9664949822c0d443db35f06f4</string>


</resources>